--- a/app/containers/styles.css
+++ b/app/containers/styles.css
@@ -6,16 +6,17 @@ html, body {
 body {
   font: 14px 'Helvetica Neue', Helvetica, Arial, sans-serif;
   line-height: 1.4em;
-  background: #e0e0e0;
+  background: #fcfbfb;
   color: #4d4d4d;
   min-width: 510px;
   margin: 0 auto;
   -webkit-font-smoothing: antialiased;
   font-weight: 300;
+  letter-spacing: 1.1px;
+  box-sizing: border-box;
 }
 
 .app {
-  background: #fff;
   margin: 10px;
   position: relative;
   box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.3), 0 25px 50px 0 rgba(0, 0, 0, 0.2);
@@ -27,24 +28,8 @@ body {
   color: #e6e6e6;
 }
 
-.app input::-moz-placeholder {
-  font-style: italic;
-  font-weight: 300;
-  color: #e6e6e6;
-}
-
 .app input::input-placeholder {
   font-style: italic;
   font-weight: 300;
   color: #c5c8c6;
-}
-
-.controlPanelApp {
-  width: 550px;
-}
-
-.cacheLibraryApp {
-  display: flex;
-  flex-direction: column;
-  min-height: calc(100vh - 20px);
 }
