--- a/app/containers/styles.css
+++ b/app/containers/styles.css
@@ -25,11 +25,11 @@ body {
 .app input::-webkit-input-placeholder {
   font-style: italic;
   font-weight: 300;
-  color: #e6e6e6;
+  color: #cccccc;
 }
 
 .app input::input-placeholder {
   font-style: italic;
   font-weight: 300;
-  color: #c5c8c6;
+  color: #cccccc;
 }
