--- a/app/containers/styles.css
+++ b/app/containers/styles.css
@@ -8,7 +8,8 @@ body {
   line-height: 1.4em;
   background: #fcfbfb;
   color: #4d4d4d;
-  min-width: 510px;
+  min-width: 500px;
+  max-width: 500px;
   margin: 0 auto;
   -webkit-font-smoothing: antialiased;
   font-weight: 300;
