--- a/app/components/header/styles.css
+++ b/app/components/header/styles.css
@@ -1,6 +1,6 @@
 .header {
   background-color: #444;
-  padding: 10px 13px;
+  padding: 5px 13px;
   margin-bottom: 10px;
   border-top: 1px solid #04eba1;
   border-bottom: 2px solid #04eba1;
@@ -8,7 +8,7 @@
   font-style: italic;
   font-weight: bold;
 
-  text-transform: uppercase;
+  /* text-transform: uppercase; */
 
   color: white;
 }
