--- a/app/components/header/styles.css
+++ b/app/components/header/styles.css
@@ -1,7 +1,7 @@
 .header {
   background-color: #444;
   padding: 5px 13px;
-  margin-bottom: 10px;
+  /* margin-bottom: 10px; */
   border-top: 1px solid #04eba1;
   border-bottom: 2px solid #04eba1;
 
