--- a/app/components/search/styles.css
+++ b/app/components/search/styles.css
@@ -19,6 +19,7 @@
   box-sizing: border-box;
   outline: none;
   border: 1px solid #bbb;
+  color: #4d4d4d;
 }
 
 .searchBar button {
@@ -40,8 +41,12 @@
 
 .searchBar button:active {
   background-color:  #23be8d;
-
 }
+
+.resultActive {
+  background-color: #eee;
+}
+
 
 /* .resultItem {
   width: 390px;
@@ -50,17 +55,19 @@
   text-overflow: ellipsis;
 } */
 
+
 .results .info {
-  font-weight: 400;
+  /* font-weight: 400; */
   /* text-transform: uppercase; */
 }
 .results .back {
-  margin: 10px 0;
+  margin: 0 0 10px 0;
   cursor: pointer;
-  color: #333;
+  /* color: #333; */
+
 }
 .results a {
-  color: #333;
+  color: #4d4d4d;
   text-decoration: none;
   cursor: pointer;
   font-weight: 300;
@@ -82,7 +89,7 @@
   counter-increment: item;
   margin-bottom: 10px;
 
-  width: 100%;
+  width: 445px;
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
@@ -98,9 +105,11 @@
   background: #04eba1;
   border-radius: 100%;
   color: #444;
-  font-weight: bold;
-  width: 1.3em;
-  padding: 3px;
+  /* font-weight: bold; */
+  width: 1.2em;
   text-align: center;
   display: inline-block;
+  vertical-align: middle;
+  font-size: 12px;
+  width: 18px;
 }
