--- a/app/containers/styles.css
+++ b/app/containers/styles.css
@@ -4,8 +4,9 @@ html, body {
 }
 
 body {
-  font: 14px 'Helvetica Neue', Helvetica, Arial, sans-serif;
-  line-height: 1.4em;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  font-size: 14px;
+  line-height: 1.2em;
   background: #fcfbfb;
   color: #4d4d4d;
   min-width: 500px;
@@ -13,7 +14,7 @@ body {
   margin: 0 auto;
   -webkit-font-smoothing: antialiased;
   font-weight: 300;
-  letter-spacing: 1.1px;
+  /* letter-spacing: 1.1px; */
   box-sizing: border-box;
 }
 
