--- a/app/components/footer/styles.css
+++ b/app/components/footer/styles.css
@@ -1,8 +1,8 @@
 .footer {
   border-top: 1px solid  rgba(153, 153, 153, 0.644);
+  box-shadow: 1px;
   display: flex;
   justify-content: space-between;
-  padding: 8px 13px;
+  padding: 5px 10px;
   font-weight: 400;
-  /* margin-top: 10px; */
 }
