--- a/app/components/footer/styles.css
+++ b/app/components/footer/styles.css
@@ -4,5 +4,6 @@
   display: flex;
   justify-content: space-between;
   padding: 5px 10px;
-  font-weight: 400;
+  color: #999;
+  font-size: 0.8em
 }
