--- a/app/components/header/styles.css
+++ b/app/components/header/styles.css
@@ -1,10 +1,11 @@
 .header {
-  background-color: #666;
-  padding: 5px 13px;
-  border-top: 1px solid #04eba1;
-  border-bottom: 2px solid #04eba1;
+  background-color: #2979ff;
+  padding: 5px 10px;
+  border-bottom: 4px solid #004ecb;
   font-style: italic;
   font-weight: bold;
-  padding: 8px;
-  color: white;
+  font-family: 'Courier New', Courier, monospace;
+  font-size: 16px;
+  padding: 8px 8px 3px 8px;
+  color: #fff;
 }
