--- a/app/components/header/styles.css
+++ b/app/components/header/styles.css
@@ -1,11 +1,11 @@
 .header {
-  background-color: #2979ff;
+  background-color: #222831;
   padding: 5px 10px;
-  border-bottom: 4px solid #004ecb;
+  border-bottom: 4px solid #585858;
   font-style: italic;
   font-weight: bold;
   font-family: 'Courier New', Courier, monospace;
   font-size: 16px;
   padding: 8px 8px 3px 8px;
-  color: #fff;
+  color: #ddd;
 }
