--- a/app/containers/styles.css
+++ b/app/containers/styles.css
@@ -7,8 +7,8 @@ body {
   font-family: Verdana, Geneva, Tahoma, sans-serif;
   font-size: 14px;
   line-height: 1.2em;
-  background: #fcfbfb;
-  color: #4d4d4d;
+  background: #30343b;
+  color: #eeeeee;
   min-width: 500px;
   max-width: 500px;
   margin: 0 auto;
@@ -21,7 +21,7 @@ body {
 .app {
   margin: 10px;
   position: relative;
-  box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.3), 0 25px 50px 0 rgba(0, 0, 0, 0.2);
+  box-shadow: 0 2px 4px 0 #585858, 0 25px 50px 0 #585858;
 }
 
 .app input::-webkit-input-placeholder {
